ADEN-13176 - last fixes - z-index per-each site

--- a/src/platforms/news-and-ratings/giantbomb/styles.scss
+++ b/src/platforms/news-and-ratings/giantbomb/styles.scss
@@ -3,6 +3,14 @@
 
 body {
 	@include uap-styles();
+
+	&.has-uap {
+		#top_leaderboard {
+			&.sticky-tlb {
+				z-index: 10001;
+			}
+		}
+	}
 }
 
 .gpt-ad {
