--- a/src/platforms/news-and-ratings/shared/styles/uap-styles.scss
+++ b/src/platforms/news-and-ratings/shared/styles/uap-styles.scss
@@ -17,7 +17,7 @@
 
 			@include bfaa-slot();
 			@include uap-porvata();
-			@include sticky-tlb-slot(0px, 5000061);
+			@include sticky-tlb-slot();
 
 			html.desktop &,
 			html.tablet.landscape & {
