--- a/src/platforms/news-and-ratings/tvguide/styles.scss
+++ b/src/platforms/news-and-ratings/tvguide/styles.scss
@@ -13,6 +13,14 @@ body {
 			display: none;
 		}
 	}
+
+	&.has-uap {
+		#top_leaderboard {
+			&.sticky-tlb {
+				z-index: 202;
+			}
+		}
+	}
 }
 
 .gpt-ad {
